# coral

./: .slurp  CORAL22.md  Cargo.toml  LLVM_READINESS_CHECKLIST.md  README.md  assessment.md  build.rs  coral.ebnf  coral.ebnfbk  debug_func.co  debug_test.co  example.co  list_append_test.cor  setup.sh  slurp.txt  syntax.co  ternary_test.cor  test.co  test_message_handler.co  test_new_features.cor  todo.txt  working_features.cor
coral_guide/: actor_model.md  advanced_topics.md  examples_use_cases.md  functional_programming.md  getting_started.md  glossary.md  introduction.md  language_basics.md  object_oriented_programming.md  other_influences.md  persistence_model.md
docs/: TODO.md  coral.ebnf  coral_improvements_summary.md  coral_language_comprehensive_assessment.md
examples/: debug_at.co  debug_func.co  debug_test.co  example.co  simple_test.co  syntax.co  test.co
runtime/: runtime.c
src/: ast.rs  codegen.rs  interpreter.rs  lexer.rs  lib.rs  lsp.rs  lsp_main.rs  main.rs  main_llvm_demo.rs  parser.rs  resolver.rs  semantic.rs  test_runner.rs  token.rs  token_dumper.rs
tests/: full_features.cor  full_features.expected  operators.cor  operators.expected  parser_validation.cor  parser_validation.expected  string_test.cor  test_bare_dollar.co  test_comprehensive.co  test_indented.co  test_iterate.co  test_iterate_no_dollar.co  test_simple.co
tree-sitter-coral/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
vscode-coral/: LICENSE  coral-language-0.1.0.vsix  coral-language-0.2.0.vsix  (+4 more)
(+29 files in other folders)
