[package]
name = "coral"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coral"
path = "src/main.rs"

[[bin]]
name = "token_dumper"
path = "src/token_dumper.rs"

[[bin]]
name = "coral-llvm"
path = "src/main_llvm_demo.rs"

[[bin]]
name = "test-runner"
path = "src/test_runner.rs"

[lib]
name = "coral"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
cc = "1.0"
